<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ListPreference
        android:id="@+id/sc_color_menu"
        android:defaultValue="true"
        android:entries="@array/sc_color_entries"
        android:entryValues="@array/sc_color_values"
        android:key="@string/sc_color_key"
        android:title="@string/sc_color_title" />
    <ListPreference
        android:id="@+id/sc_difficulty_menu"
        android:defaultValue="true"
        android:entries="@array/sc_difficulty_entries"
        android:entryValues="@array/sc_difficulty_values"
        android:key="@string/sc_difficulty_key"
        android:title="@string/sc_difficulty_level"
        app:persistent="true" />
    <ListPreference
        android:id="@+id/sc_shape_menu"
        android:defaultValue="true"
        android:entries="@array/sc_shape_entries"
        android:entryValues="@array/sc_shape_values"
        android:key="@string/sc_shape_key"
        android:title="@string/sc_shape_title" />
</PreferenceScreen>
